# OSCAR

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CARLA_DETECTION.mk  CARLA_TRACKING.mk  DAPRICOT.mk  EVAL5_CARLA_DETECTION.mk  EVAL6_CARLA_DETECTION.mk  LICENSE-3RD-PARTY  LICENSE.md  Makefile  README.md  UCF101.mk  pyproject.toml
configs/attack/: fgsm.yaml  mask_pgd.yaml  object_detection_adversary_additive.yaml  object_detection_adversary_mask_additive.yaml  object_detection_adversary_mask_overlay.yaml  pgd.yaml
configs/callbacks/: default.yaml
configs/datamodule/: armory_carla_objdet.yaml  (+8 more)
docker/: Dockerfile
lib/oscar-datagen-toolkit/: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  pyproject.toml
lib/oscar-datagen-toolkit/docker/: Dockerfile  Dockerfile-adversary  Dockerfile-base  Dockerfile-carla  Dockerfile-carla-build  Dockerfile-oscar-datagen  build.sh  launch_carla_server.sh
lib/oscar-datagen-toolkit/docker/patches/: 0001-Add-clang-10-support-to-build-scripts.patch  0002-Port-boost-files-to-c-20.patch  0003-Port-CARLA-world-client-implementation-to-python-3.9.patch  0004-Disable-tests.patch  0005-Add-agents-package-to-setup.py.patch
lib/oscar-datagen-toolkit/docker/scripts/: entrypoint.sh
lib/oscar-datagen-toolkit/docs/: Actors.md  Data-collector-config-example.md  Data-collector-config.md  Data-visualization.md  Generated-data-structure.md  Setup-Docker.md
lib/oscar-datagen-toolkit/oscar_datagen_tools/: __init__.py  oscar_annotator.py  oscar_data_saver.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/annotation/: __init__.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/annotation/annotators/: __init__.py  annotation.py  base.py  format.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/annotation/utils/: __init__.py  label_utils.py  utils.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/common_utils/: utils.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/configs/: collector.yaml
lib/oscar-datagen-toolkit/oscar_datagen_tools/configs/context/: default.yaml
lib/oscar-datagen-toolkit/oscar_datagen_tools/configs/hydra/: default.yaml
lib/oscar-datagen-toolkit/oscar_datagen_tools/configs/paths/: default.yaml
lib/oscar-datagen-toolkit/oscar_datagen_tools/configs/simulation/: eval7_dev_00000043.yaml  eval7_dev_00000045.yaml  eval7_dev_00000070.yaml  eval7_dev_00000083.yaml  eval7_dev_00000115.yaml  eval7_dev_00000185.yaml  eval7_dev_00000225.yaml  eval7_dev_00000257.yaml  eval7_dev_00000270.yaml  eval7_dev_00000783.yaml  eval7_dev_10000001.yaml  eval7_dev_10000026.yaml  eval7_dev_10000032.yaml  eval7_dev_10000033.yaml  eval7_dev_10000034.yaml  eval7_dev_10000048.yaml  eval7_dev_10000049.yaml  eval7_dev_10000051.yaml  eval7_dev_10000059.yaml  eval7_dev_10000078.yaml  mobile_sensors.yaml  pedestrian_spawn.yaml  sensors_hero.yaml  static_sensors.yaml  tracking.yaml
lib/oscar-datagen-toolkit/oscar_datagen_tools/dataset/: __init__.py  carla_renderer.py  dataset.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/simulation/: __init__.py  context.py  sim_controller.py  sync_mode.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/simulation/actors/: __init__.py  base.py  controller_actors.py  generator.py  patches.py  scene_actors.py  sensor.py  transform.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/simulation/blueprints/: __init__.py  base.py  patch_blueprints.py  scene_blueprints.py  sensor_blueprints.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/simulation/parameters/: __init__.py  actor_parameters.py  context_parameters.py
lib/oscar-datagen-toolkit/oscar_datagen_tools/simulation/utils/: __init__.py  utils.py
lib/oscar-datagen-toolkit/scripts/: annotate.sh  collect.sh  notebook.sh
lib/oscar-datagen-toolkit/scritps/: collect.sh  common.sh
notebook/: likelihood_attacks.ipynb
oscar/: __init__.py  transforms.py
test/: conftest.py  test_ablator.py  test_detectron2_preprocessor.py  test_gaussian_augmentation.py  test_multichannel_semantic_segmentor.py  test_paletted_semantic_segmentor.py  test_utils.py
(+133 files in other folders)
