[project]
name        = "oscar"
version     = "3.0.0"
description = ""
authors     = [{name = "Cory Cornelius", email = "cory.cornelius@intel.com"}]
license     = {file = "LICENSE"}

requires-python = ">=3.9,<3.10"

dependencies = [
    "armory-testbed[pytorch] == 0.16.2",
    "mart @ git+https://www.github.com/IntelLabs/MART.git@v0.2.1",
    "kornia == 0.6.5",
    "numpy == 1.23.5",
    "open3d == 0.16.0",
    "fire == 0.5.0",
]

[project.urls]
Source = "https://github.com/IntelLabs/OSCAR"

[project.optional-dependencies]
developer = [
    "gdown"
]

[tool.setuptools.packages.find]
include = ["oscar*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]


